Add support for Any arguments

https://bugzilla.gnome.org/show_bug.cgi?id=601253